Delete CardController and do some other stuff